# camel-xbench-fork

./: README.md  pyproject.toml
agents/: chat_agent.py
camel/toolkits/: browser_toolkit.py
camel/types/: enums.py
camel/utils/: token_counting.py
interpreters/: subprocess_interpreter.py
models/: gemini_model.py
societies/: role_playing.py
toolkits/: video_download_toolkit.py
utils/: token_counting.py
